src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Phone_Number__c</fullName>
        <label>Bank Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CGPA__c</fullName>
        <formula>(X1st_Sem_Percentage__c + X2nd_Sem_Percentage__c + X3rd_Sem_Percentage__c + X4th_Sem_Percentage__c)/4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CGPA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
                <value>
                    <fullName>MCA</fullName>
                </value>
                <value>
                    <fullName>MCOM</fullName>
                </value>
                <value>
                    <fullName>MSCIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>15</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <label>Current Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_And_Time__c</fullName>
        <label>Date And Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <label>Document</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Donation_Amount__c</fullName>
        <label>Donation Amount</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exam_Fess_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exam Fees Submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Father_Mobile_Number__c</fullName>
        <label>Father Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <label>Father Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fees_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fees Submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IFSC_Code__c</fullName>
        <label>IFSC Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Donation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Donation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linkedin_Url__c</fullName>
        <label>Linkedin Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Student Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Overall_Grade__c</fullName>
        <formula>IF(
(X1st_Sem_Percentage__c  +  X2nd_Sem_Percentage__c  +  X3rd_Sem_Percentage__c  +  X4th_Sem_Percentage__c)/4 &lt; 0.36, &apos;F&apos;, 
 IF((X1st_Sem_Percentage__c  +  X2nd_Sem_Percentage__c  +  X3rd_Sem_Percentage__c  +  X4th_Sem_Percentage__c)/4 &lt; 0.60, &apos;C&apos;,
 IF((X1st_Sem_Percentage__c  +  X2nd_Sem_Percentage__c  +  X3rd_Sem_Percentage__c  +  X4th_Sem_Percentage__c)/4 &lt; 0.80, &apos;B&apos;, &apos;A&apos;)  ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Exam_Fees__c</fullName>
        <label>Pending Exam Fees</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Fees_Amount__c</fullName>
        <label>Pending Fees Amount</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Overall_Amount__c</fullName>
        <formula>Pending_Exam_Fees__c +  Pending_Fees_Amount__c +  Donation_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Overall Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Roll_Number__c</fullName>
        <label>Roll Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stream__c</fullName>
        <label>Stream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Commerce</fullName>
                </value>
                <value>
                    <fullName>Arts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subjects_In_Which_Back_1st_Sem__c</fullName>
        <label>Subjects In Which Back(1st Sem)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subjects</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subjects_In_Which_Back_2nd_Sem__c</fullName>
        <label>Subjects In Which Back(2nd Sem)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subjects</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subjects_In_Which_Back_3rd_Sem__c</fullName>
        <label>Subjects In Which Back(3rd Sem)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subjects</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subjects_In_Which_Back_4thSem__c</fullName>
        <label>Subjects In Which Back(4thSem)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subjects</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>Time</type>
    </fields>
	<fields>
        <fullName>Year_of_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Year of Class</label>
        <referenceTo>Year_of_Class__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X1st_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1st Sem Back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1st_Sem_Percentage__c</fullName>
        <label>1st Sem Percentage</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X2nd_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2nd Sem Back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2nd_Sem_Percentage__c</fullName>
        <label>2nd Sem Percentage</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X3rd_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3rd Sem Back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3rd_Sem_Percentage__c</fullName>
        <label>3rd Sem Percentage</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X4th_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>4th Sem Back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X4th_Sem_Percentage__c</fullName>
        <label>4th Sem Percentage</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Registrar</fullName>
        <active>true</active>
        <label>Registrar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Teacher</fullName>
        <active>true</active>
        <label>Teacher</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>